--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -86,7 +86,7 @@ button#title-menu-button {
   display: flex;
   gap: 0.5em;
   width: 0;
-  height: fit-content;
+  height: 100%;
   justify-content: center;
   font-size: $fontSize;
   overflow: hidden;
@@ -100,7 +100,7 @@ button#title-menu-button {
   
 }
 
-.menu-item {
+.menu-item, .submenu-item {
   text-align: center;
   padding: 0.2em 0.5em;
   border-radius: Theme.$buttonRadius;
