Fix: Adoption banner pushing puppifications component off the layout.

--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -2,7 +2,7 @@
 
 .adoptionBanner {
   width: 100%;
-  height: 100%;
+  height: auto;
   // Configure most rules from this class
   button.eventHandlerDiv,
   .closed-content {
