--- a/src/styles/construction-placeholder.scss
+++ b/src/styles/construction-placeholder.scss
@@ -10,7 +10,7 @@ a.construction-doodle {
   border: 5px solid Theme.$tertiaryCherry;
   border-radius: Theme.$buttonRadius;
   text-decoration: none;
-  color: white;
+  color: Theme.$white;
   cursor: pointer;
   font-size: 1rem;
   margin: 1rem;
