--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,11 @@ html * {
   box-sizing: border-box; // who knows. It might be a good practice.
 }
 
+html {
+  background-color: Theme.$white;
+  scroll-behavior: smooth;
+}
+
 main {
   min-height: 100vh;
   width: 100vw;
