--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -9,7 +9,7 @@ a.home-button {
   aspect-ratio: 1/1;
   border: 4px solid Theme.$primary;
   border-radius: 100%;
-  background-color: white;
+  background-color: Theme.$white;
   transition: all #{Theme.$transitionShort}s;
   &:hover {
     scale: $max-scale;
@@ -76,7 +76,6 @@ $spaceBetweenLayouts: 100px;
   @include all-layouts;
   flex: 1 1;
   padding: Theme.$spaceBetweenElements 0 $spaceBetweenLayouts 0;
-  background-color: white;
 }
 
 .wood-layout {
