Style! Change site components from wood/brown theme to grayscale.

--- a/src/app/@_2wood/(about)/about/development/page.module.scss
+++ b/src/app/@_2wood/(about)/about/development/page.module.scss
@@ -16,5 +16,8 @@
 }
 
 .gh-link {
-  color: Theme.$lightSecondaryGreen;
+  color: Theme.$darkSecondaryGreen;
+  &:hover {
+    text-decoration: underline;
+  }
 }
