Style: Small adjustments to adoption button.

--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -17,7 +17,7 @@
     justify-content: center;
     background-color: Theme.$white;
     .buttonText {
-      color: Theme.$black;
+      color: Theme.$darkSecondaryGreen;
       text-align: center;
       font-size: 6.4rem;
       text-decoration: none;
