Style!: Removes gendered colors from dog images.
BREAKING CHANGE: Users will now not inherenly know whether a dog is male
or female when visiting the site.

--- a/src/app/(white)/(about)/about/page.module.scss
+++ b/src/app/(white)/(about)/about/page.module.scss
@@ -3,14 +3,19 @@
 .attention-getter-image {
   flex-direction: column;
   img {
-    box-shadow: none;
     cursor: auto;
+    background-color: transparent;
+    outline: none;
     &:hover {
       transform: none;
+      background-color: transparent;
+      outline: none;
       scale: none;
     }
     &:active {
       transform: none;
+      background-color: transparent;
+      outline: none;
     }
   }
 }
