--- a/src/app/@_2wood/(about)/about/development/page.module.scss
+++ b/src/app/@_2wood/(about)/about/development/page.module.scss
@@ -3,8 +3,9 @@
 
 .image_gh {
   @extend .image;
-  background-color: Theme.$lightPrimary;
-  border: 0.5rem solid Theme.$lightPrimary;
+  &:hover {
+    background-color: inherit;
+  }
 }
 
 .attention-getter-image {
