--- a/src/app/@_2wood/(parents)/parents.module.scss
+++ b/src/app/@_2wood/(parents)/parents.module.scss
@@ -4,7 +4,7 @@
 .puppyLink {
   @extend .puppyLink;
   img {
-    @include Theme.imageHover(black);
+    @include Theme.imageHover(Theme.$darkHeadshot, Theme.$lightHeadshot);
   }
 }
 
