--- a/src/styles/GroupPhoto.module.scss
+++ b/src/styles/GroupPhoto.module.scss
@@ -1,14 +1,14 @@
 @use "@styles/_theme.module.scss" as Theme;
 
 .groupPhoto {
-  padding: 1rem;
+  padding: Theme.$imgPad;
   margin-bottom: Theme.$spaceBetweenElements 0;
   border-radius: Theme.$buttonRadius;
-  outline: 2px solid Theme.$darkPrimary;
+  outline: Theme.$headshotOutline;
   outline-offset: -1px;
 
   transition: all #{Theme.$transitionShort}s;
-  @include Theme.imageHover(Theme.$darkPrimary);
+  @include Theme.imageHover(Theme.$darkHeadshot, Theme.$lightHeadshot);
   @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
     width: 100%;
     height: auto;
